--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
     "next": "^13.4.4",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.62.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
